<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_confirm_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/half_round"
                android:gravity="center"
                android:padding="20px"
                android:text="@string/lbl_confirm_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_order_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20px"
                    android:text="Order Confirmation"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lbl_confirm_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20px"
                android:text="@string/lbl_thanks"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:background="@drawable/et_custom"
                android:orientation="vertical"
                android:padding="10px">

                <TextView
                    android:id="@+id/lbl_purchased_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20px"
                    android:text="@string/lbl_purchased_item_title"
                    android:textColor="#009688"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_item_purchased"
                        android:layout_width="500px"
                        android:layout_height="300px"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lbl_item_purchased"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="20px"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/lbl_purchased_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="20px"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:background="@drawable/et_custom"
                android:orientation="vertical"
                android:padding="10px">

                <TextView
                    android:id="@+id/lbl_ship_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20px"
                    android:text="@string/lbl_ship_to"
                    android:textColor="#009688"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>

                <TextView
                    android:id="@+id/lbl_confirm_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20px"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:background="@drawable/et_custom"
                android:orientation="vertical"
                android:padding="10px">

                <TextView
                    android:id="@+id/lbl_order_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20px"
                    android:text="@string/lbl_order_total"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#009688" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="30px">

                        <TextView
                            android:id="@+id/lbl_item_price"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/lbl_item_price"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lbl_item_price_val"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30px"
                            android:text="sdfds"
                            android:textAlignment="center"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="30px"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/lbl_shipping"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/lbl_shipping"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lbl_shipping_val"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30px"
                            android:text="sdfds"
                            android:textAlignment="center"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="30px">

                        <TextView
                            android:id="@+id/lbl_confirm_total"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/lbl_confirm_total"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lbl_confirm_total_val"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30px"
                            android:text="sdfds"
                            android:textAlignment="center"
                            android:textSize="20sp" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_continue_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:background="@drawable/btn_custom"
                android:text="@string/btn_continue_shop"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>